# glyfosaat

./: .gitignore  ElligibleCrops.csv  README.md  pyproject.toml
src/: A1_get_satellite_data.py  B1_NDVI_per_plot.py  B2_Algorithm.py  C1_Spatial_analysis.py
