[tool.poetry]
name = "glyfosaat"
version = "0.1.0"
description = "Environment used for glyfosaat project"
authors = ["Dimitri Tokmetzis <dimitri.tokmetzis@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
pandas = "^2.2.3"
shapely = "^2.0.6"
OWSLib = "^0.32.0"
geemap = "^0.35.1"
pyarrow = "^18.0.0"
requests = "^2.32.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
earthengine-api = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
